--- a/tabla-precios.html
+++ b/tabla-precios.html
@@ -10,7 +10,16 @@
     <section>
         <div>
             <h2>Plan Uno</h2>
-            
+            <p>$500</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <hr>
+            <p>Lorem, ipsum dolor</p>
+            <p>Lorem ipsum dolor sit amet consectetur</p>
+            <p>Lorem, ipsum</p>
+            <hr>
+            <a href="#">Comprar</a>
+
+
         </div>
     </section>
 </body>
