--- a/tabla-precios.html
+++ b/tabla-precios.html
@@ -11,7 +11,7 @@
         <div>
             <h2>Plan Uno</h2>
             <p>$500</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
             <hr>
             <p>Lorem, ipsum dolor</p>
             <p>Lorem ipsum dolor sit amet consectetur</p>
