--- a/tabla-precios.html
+++ b/tabla-precios.html
@@ -7,18 +7,17 @@
     <link rel="stylesheet" href="tabla-precios.css">
 </head>
 <body>
-    <section>
-        <div>
+    <section class="container">
+        <div class= "columna">
             <h2>Plan Uno</h2>
-            <p>$500</p>
+            <p class="precio">$500</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
             <hr>
             <p>Lorem, ipsum dolor</p>
             <p>Lorem ipsum dolor sit amet consectetur</p>
             <p>Lorem, ipsum</p>
             <hr>
-            <a href="#">Comprar</a>
-
+            <a href="#" class= "btn_precio">Comprar</a>
 
         </div>
     </section>
