--- a/tabla-precios.html
+++ b/tabla-precios.html
@@ -21,5 +21,50 @@
 
         </div>
     </section>
+
+    <section class="container">
+        <div class= "columna">
+            <h2>Plan Uno</h2>
+            <p class="precio">$500</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
+            <hr>
+            <p>Lorem, ipsum dolor</p>
+            <p>Lorem ipsum dolor sit amet consectetur</p>
+            <p>Lorem, ipsum</p>
+            <hr>
+            <a href="#" class= "btn_precio">Comprar</a>
+
+        </div>
+    </section>
+
+    <section class="container">
+        <div class= "columna">
+            <h2>Plan Uno</h2>
+            <p class="precio">$500</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
+            <hr>
+            <p>Lorem, ipsum dolor</p>
+            <p>Lorem ipsum dolor sit amet consectetur</p>
+            <p>Lorem, ipsum</p>
+            <hr>
+            <a href="#" class= "btn_precio">Comprar</a>
+
+        </div>
+    </section>
+
+    <section class="container">
+        <div class= "columna">
+            <h2>Plan Uno</h2>
+            <p class="precio">$500</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
+            <hr>
+            <p>Lorem, ipsum dolor</p>
+            <p>Lorem ipsum dolor sit amet consectetur</p>
+            <p>Lorem, ipsum</p>
+            <hr>
+            <a href="#" class= "btn_precio">Comprar</a>
+
+        </div>
+    </section>
 </body>
 </html>
