--- a/tabla-precios.html
+++ b/tabla-precios.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="tabla-precios.css">
 </head>
 <body>
-    <section class="container">
+    <section class="container flex">
         <div class= "columna">
             <h2>Plan Uno</h2>
             <p class="precio">$500</p>
@@ -56,7 +56,7 @@
             <hr>
             <a href="#" class= "btn_precio">Comprar</a>
         </div>
-        
+
     </section>
 
 </body>
