--- a/tabla-precios.html
+++ b/tabla-precios.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="tabla-precios.css">
 </head>
 <body>
-    <section class="container flex">
+    <section class="container flex text-center">
         <div class= "columna">
             <h2>Plan Uno</h2>
             <p class="precio">$500</p>
