Cambio en planes

--- a/tabla-precios.html
+++ b/tabla-precios.html
@@ -11,7 +11,7 @@
     <section class="container flex text-center">
         <div class= "columna">
             <h2>Plan Uno</h2>
-            <p class="precio">$500</p>
+            <p class="precio">$150</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
             <hr>
             <p>Lorem, ipsum dolor</p>
@@ -22,8 +22,8 @@
         </div>
 
         <div class= "columna">
-            <h2>Plan Uno</h2>
-            <p class="precio">$500</p>
+            <h2>Plan Dos</h2>
+            <p class="precio">$250</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
             <hr>
             <p>Lorem, ipsum dolor</p>
@@ -34,8 +34,8 @@
         </div>
 
         <div class= "columna">
-            <h2>Plan Uno</h2>
-            <p class="precio">$500</p>
+            <h2>Plan Tres</h2>
+            <p class="precio">$400</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
             <hr>
             <p>Lorem, ipsum dolor</p>
@@ -46,8 +46,8 @@
         </div>
 
         <div class= "columna">
-            <h2>Plan Uno</h2>
-            <p class="precio">$500</p>
+            <h2>Plan Cuatro</h2>
+            <p class="precio">$800</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
             <hr>
             <p>Lorem, ipsum dolor</p>
